feat: v0.0.0.1 add JavaFX